# stm32f446_hal_meson

./: .mxproject  README.md  cross.ini  gcovr.cfg  meson.build  stm32_hal_meson1.ioc
Core/Src/: gpio.c  main.c
app/: app.c
app/MathOperations/: sum.c  sum.h
subprojects/mxgen/: .cproject  .mxproject  .project  cross.ini  meson.build  mxgen.ioc
subprojects/mxgen/Core/Src/: main.c
test/: testcase.cpp
tests/: meson.build  test_group_runner.c
tests/MathOperations/: ut_MathOperations.c
tests/subprojects/Unity/: meson.build  meson_options.txt
